# TapCode

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  PRD.md
android/: gradle.properties
assets/: main.css
assets/data/: rust_pack.json
src/: config.rs.example  engine.rs  lib.rs  main.rs  models.rs  route.rs  state.rs  validator.rs
src/component_logic/: canvas.rs  keyboard.rs  mod.rs  picker.rs
src/components/: action_bar.rs  canvas.rs  chip.rs  confetti.rs  error_states.rs  feedback_panel.rs  mod.rs  nav_shell.rs  picker.rs  progress_bar.rs  streak.rs  xp_display.rs
src/screens/: compose.rs  home.rs  lesson.rs  mod.rs  module_complete.rs  module_map.rs  onboarding.rs  paywall.rs  profile.rs
src/services/: mod.rs  offline_queue.rs  platform.rs  supabase.rs  sync.rs
tests/: challenge_compilation.rs  component_tests.rs  platform_tests.rs
