[package]
name = "tapcode"
version = "0.1.0"
edition = "2021"
description = "Mobile-first programming language learning app — build code by tapping, not typing"

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
log = "0.4"

# reqwest for Supabase - with platform-appropriate TLS
# Android doesn't ship OpenSSL, so we use rustls for all native targets.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = "0.3"
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
